Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90744

[REG: 5.13 -> 5.14] QPixmap::load returns false for svg files if file encoding not utf-8 & format not specified

XMLWordPrintable

    • 45fb1f07eaa984af40fca9f12b8f3d27f7b0e9ac (qt/qtsvg/dev) 9a669aad89843252541acf636b34f14799c554f1 (qt/tqtc-qtsvg/tqtc/lts-5.15) 0f219c8d11f03f3c01df9b7a60535bb86ef45cd7 (qt/qtsvg/6.0) e0dd65ea8584f006281e931de041b79b16de0cf4 (qt/qtsvg/6.1)

      Starting from Qt 5.14.0 passing path to .svg image to QPixmap::load returns false if the file encoding is not utf-8. At least for UTF-16 le the image format needs to be passed to QPixmap::load for the image to be loaded successfully.

      Steps to reproduce the problem:

      1. Run the attached project with a version < 5.14.0
        => button icon visible
      2. Run the attached project with a version >= 5.14.0
        => icons disappear

        1. qtbug90744.zip
          2 kB
          Miika Pernu
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vgt Eirik Aavitsland
            miikapernu Miika Pernu
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes